--- a/index.html
+++ b/index.html
@@ -23,12 +23,52 @@
       </header>
 
       <footer>
-        This project was coded by Anna Abbà and is
-        <a
-          href="https://github.com/AnnaAbba89/turin-travel-project"
-          target="_blank"
-          >open sourced</a
-        >
+        <section class="grid">
+          <div>
+            <h3>More about Turin</h3>
+            <ul>
+              <li>
+                <a href="https://www.aeroportoditorino.it/en" target="_blank">
+                  Turin Airport website</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/XAFd9yxJSwQFAkGi9"
+                  target="_blank"
+                  >Map of Turin</a
+                >
+              </li>
+              <li>
+                <a href="https://www.gtt.to.it/cms/en/fares" target="_blank"
+                  >Public transport in Turin</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Anna and I've been living in Turin for a few
+              months. I'm very fond of the city. I created this page as part of
+              a project for SheCodes Responsive to develop my coding skills.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this page as part of a project for SheCodes Responsive
+              to develop my coding skills.
+              <br />
+              This project was coded by Anna Abbà and is
+              <a
+                href="https://github.com/AnnaAbba89/turin-travel-project"
+                target="_blank"
+                >open sourced</a
+              >
+            </p>
+          </div>
+        </section>
       </footer>
     </div>
   </body>
