Added cards to the homepage

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
       <main>
         <section class="grid grid-2-columns">
           <div>
-            <img src="images/Turin.jpg" alt="View of Turin from the hill" />
+            <img
+              src="images/Turin.jpg"
+              alt="View of Turin from the hill"
+              class="img-responsive"
+            />
           </div>
           <div>
             <h2>Why Turin</h2>
@@ -47,6 +51,99 @@
               museums and other venues. Turin is well known for its Baroque,
               Rococo, Neoclassical, and Art Nouveau architecture.
             </p>
+          </div>
+        </section>
+        <section class="secondary">
+          <h2 class="text-center">CAFÉS</h2>
+          <h3 class="text-center">My favorite cafés in Turin</h3>
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/cafes/Bicierin.webp"
+                  class="bicierin-cafe"
+                  alt=""
+                />
+              </div>
+              <div class="card-body">
+                <h4>Bicierin</h4>
+                <p>
+                  A lively all-day café and bike repair shop that serves food
+                  and drinks while fixing your bike and offers lively chats
+                  about cycles and travels.
+                </p>
+                <h5>Address</h5>
+                <p>Via Cavour 24</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Whether you are a cyclist, a tourist or a remote worker, this
+                  is one of the best spots in Turin to find a cozy atmosphere,
+                  grab a tasty bite and have a chat with their friendly and
+                  knowleadgable staff.
+                </p>
+                <div class="card-footer"></div>
+                <a href="https://www.bicierin.it/" target="_blank" class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img src="images/cafes/Baratti.jpg" alt="" />
+              </div>
+              <div class="card-body">
+                <h4>Baratti&Milano</h4>
+                <p>
+                  A fascinating, historical café to savour classy aperitivos,
+                  fine wines and hearthy hot chocolates and pastries.
+                </p>
+                <h5>Address</h5>
+                <p>P.za Castello, 27</p>
+                <h5>What I like about it</h5>
+                <p>
+                  The luxurious, artistic interiors and impeccable service take
+                  you back to 19th century's Turin. Ideal for a special treat
+                  and to explore local cuisine. Pricey but the atmosphere alone
+                  are worth a visit!
+                </p>
+                <div class="card-footer"></div>
+                <a
+                  href="https://www.barattiemilano.it/"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img src="images/cafes/Edit.jpg" alt="" />
+              </div>
+              <div class="card-body">
+                <h4>Edit</h4>
+                <p>
+                  A post-industrial brewery with an excellent selection of beers
+                  that serves food and cocktails all day long.
+                </p>
+                <h5>Address</h5>
+                <p>Piazza Teresa Noce, 15/A</p>
+                <h5>What I like about it</h5>
+                <p>
+                  With its beautiful architecture, cozy athmosphere and great
+                  background music, it's perfect for working during the day, and
+                  offers tasty dishes and drinks for an evening meet-up with
+                  friends or colleagues.
+                </p>
+
+                <div class="card-footer"></div>
+                <a
+                  href="https://www.editbrewing.com/torino//"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
           </div>
         </section>
       </main>
