Added responsive Google Maps embeds

--- a/index.html
+++ b/index.html
@@ -58,12 +58,20 @@
           <h3 class="text-center">My favorite cafés in Turin</h3>
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/cafes/Bicierin.webp"
-                  class="bicierin-cafe"
-                  alt=""
+                  class="img-responsive"
+                  alt="bicierin cafè"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2818.065818218503!2d7.6857999999999995!3d45.064175899999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d704b8f6677%3A0x93fc31cccbe60003!2sBicierin%20Ciclofficina%20con%20cucina!5e0!3m2!1sit!2sit!4v1709061435208!5m2!1sit!2sit"
+                  style="border: 0"
+                  class="embed"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Bicierin</h4>
@@ -88,8 +96,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
-                <img src="images/cafes/Baratti.jpg" alt="" />
+              <div class="card-header grid grid-2-columns">
+                <img
+                  src="images/cafes/Baratti.jpg"
+                  class="img-responsive"
+                  alt="baratti e milano cafè"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2817.793532037614!2d7.683927874997118!3d45.06969925967586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d7072d39471%3A0x4c747ff328ef45a5!2sCaff%C3%A8%20Baratti%20%26%20Milano!5e0!3m2!1sit!2sit!4v1709062092709!5m2!1sit!2sit"
+                  style="border: 0"
+                  allowfullscreen=""
+                  class="embed"
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Baratti&Milano</h4>
@@ -116,8 +136,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
-                <img src="images/cafes/Edit.jpg" alt="" />
+              <div class="card-header grid grid-2-columns">
+                <img
+                  src="images/cafes/Edit.jpg"
+                  class="img-responsive"
+                  alt="Edit brewery"
+                />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2816.7719100368836!2d7.6827738749985794!3d45.09041825830223!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47886d97a966a9a3%3A0xe2346e4480cf31f5!2sEDIT%20Torino!5e0!3m2!1sit!2sit!4v1709062361128!5m2!1sit!2sit"
+                  style="border: 0"
+                  allowfullscreen=""
+                  class="embed"
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Edit</h4>
