--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#more">Learn more</a>
       </header>
       <main>
-        <section class="grid grid-2-columns">
+        <section class="grid grid-2-columns intro">
           <div>
             <img
               src="images/Turin.jpg"
@@ -178,7 +178,7 @@
             </div>
           </div>
         </section>
-        <section>
+        <section class="gallery">
           <h2 class="text-center">GALLERY</h2>
           <h3 class="text-center">My favourite photos from Turin</h3>
           <div class="instagram-embeds">
