Adjusted intro section h2 and h3 and adjusted footer padding

--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
         </section>
       </main>
       <footer>
-        <section class="grid grid-3-columns-first-narrow">
+        <section class="grid grid-3-columns-first-narrow footer">
           <div>
             <h3>More about Turin</h3>
             <ul>
