Anchored the header button to the "more" info section on the landing page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#more">Learn more</a>
       </header>
       <main>
-        <section class="grid grid-2-columns intro">
+        <section class="grid grid-2-columns intro" id="more">
           <div>
             <img
               src="images/Turin.jpg"
